Fix empty 404.html by using simple copy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       
-      - name: Create 404 fallback for SPA routing
+      - name: Fix SPA routing fallback
         run: cp dist/index.html dist/404.html
 
       - uses: actions/upload-pages-artifact@v3
